re2c-0.9.1/demo/examples/cmmap/cmmap.c
/* Generated by re2c 0.9.1-C on Fri Oct  7 22:29:57 2022
 */
#line 1 "cmmap.re"
#include <stdlib.h>
#include <stdio.h>
#include <sys/stat.h>
#include <mman.h>
#include <string.h>

#define	ADDEQ	257
#define	ANDAND	258
#define	ANDEQ	259
#define	ARRAY	260
#define	ASM	261
#define	AUTO	262
#define	BREAK	263
#define	CASE	264
#define	CHAR	265
#define	CONST	266
#define	CONTINUE	267
#define	DECR	268
#define	DEFAULT	269
#define	DEREF	270
#define	DIVEQ	271
#define	DO	272
#define	DOUBLE	273
#define	ELLIPSIS	274
#define	ELSE	275
#define	ENUM	276
#define	EQL	277
#define	EXTERN	278
#define	FCON	279
#define	FLOAT	280
#define	FOR	281
#define	FUNCTION	282
#define	GEQ	283
#define	GOTO	284
#define	ICON	285
#define	ID	286
#define	IF	287
#define	INCR	288
#define	INT	289
#define	LEQ	290
#define	LONG	291
#define	LSHIFT	292
#define	LSHIFTEQ	293
#define	MODEQ	294
#define	MULEQ	295
#define	NEQ	296
#define	OREQ	297
#define	OROR	298
#define	POINTER	299
#define	REGISTER	300
#define	RETURN	301
#define	RSHIFT	302
#define	RSHIFTEQ	303
#define	SCON	304
#define	SHORT	305
#define	SIGNED	306
#define	SIZEOF	307
#define	STATIC	308
#define	STRUCT	309
#define	SUBEQ	310
#define	SWITCH	311
#define	TYPEDEF	312
#define	UNION	313
#define	UNSIGNED	314
#define	VOID	315
#define	VOLATILE	316
#define	WHILE	317
#define	XOREQ	318
#define	EOI	319

typedef unsigned int unint;
typedef unsigned char uchar;

#define	YYCTYPE		uchar
#define	YYCURSOR	cursor
#define	YYLIMIT		s->lim
#define	YYMARKER	s->ptr
#define	YYFILL(n)	{cursor = fill(s, cursor);}

#define	RET(i)	{s->cur = cursor; return i;}

typedef struct Scanner {
    uchar		*tok, *ptr, *cur, *pos, *lim, *eof;
    unint		line;
} Scanner;

uchar *fill(Scanner *s, uchar *cursor){
    if(!s->eof){
	unint cnt = s->lim - s->tok;
	uchar *buf = malloc((cnt + 1)*sizeof(uchar));
	memcpy(buf, s->tok, cnt);
	cursor = &buf[cursor - s->tok];
	s->pos = &buf[s->pos - s->tok];
	s->ptr = &buf[s->ptr - s->tok];
	s->lim = &buf[cnt];
	s->eof = s->lim; *(s->eof)++ = '\n';
	s->tok = buf;
    }
    return cursor;
}

int scan(Scanner *s){
	uchar *cursor = s->cur;
std:
	s->tok = cursor;
#line 116 "cmmap.re"



#line 113 "cmmap.c"
{
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy0;
	++YYCURSOR;
yy0:
	if((YYLIMIT - YYCURSOR) < 9) YYFILL(9);
	yych = *YYCURSOR;
	switch(yych){
	case '\t':	case '\v':
	case '\f':	case ' ':	goto yy73;
	case '\n':	goto yy75;
	case '!':	goto yy49;
	case '"':	goto yy28;
	case '%':	goto yy39;
	case '&':	goto yy41;
	case '\'':	goto yy24;
	case '(':	goto yy61;
	case ')':	goto yy63;
	case '*':	goto yy37;
	case '+':	goto yy33;
	case ',':	goto yy57;
	case '-':	goto yy35;
	case '.':	goto yy26;
	case '/':	goto yy2;
	case '0':	goto yy21;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy23;
	case ':':	goto yy59;
	case ';':	goto yy51;
	case '<':	goto yy31;
	case '=':	goto yy47;
	case '>':	goto yy29;
	case '?':	goto yy71;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':	case '_':	case 'h':	case 'j':
	case 'k':	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':	case 'x':
	case 'y':
	case 'z':	goto yy20;
	case '[':	goto yy65;
	case ']':	goto yy67;
	case '^':	goto yy43;
	case 'a':	goto yy4;
	case 'b':	goto yy6;
	case 'c':	goto yy7;
	case 'd':	goto yy8;
	case 'e':	goto yy9;
	case 'f':	goto yy10;
	case 'g':	goto yy11;
	case 'i':	goto yy12;
	case 'l':	goto yy13;
	case 'r':	goto yy14;
	case 's':	goto yy15;
	case 't':	goto yy16;
	case 'u':	goto yy17;
	case 'v':	goto yy18;
	case 'w':	goto yy19;
	case '{':	goto yy53;
	case '|':	goto yy45;
	case '}':	goto yy55;
	case '~':	goto yy69;
	default:	goto yy77;
	}
yy2:	yych = *++YYCURSOR;
	if(yych == '*')	goto yy341;
	if(yych == '=')	goto yy339;
	goto yy3;
yy3:
#line 205 "cmmap.re"
{ RET('/'); }
#line 219 "cmmap.c"
yy4:	yych = *++YYCURSOR;
	if(yych == 'u')	goto yy335;
	goto yy180;
yy5:
#line 154 "cmmap.re"
{ RET(ID); }
#line 226 "cmmap.c"
yy6:	yych = *++YYCURSOR;
	if(yych == 'r')	goto yy330;
	goto yy180;
yy7:	yych = *++YYCURSOR;
	if(yych <= 'g'){
		if(yych == 'a')	goto yy311;
		goto yy180;
	} else {
		if(yych <= 'h')	goto yy312;
		if(yych == 'o')	goto yy313;
		goto yy180;
	}
yy8:	yych = *++YYCURSOR;
	if(yych == 'e')	goto yy297;
	if(yych == 'o')	goto yy298;
	goto yy180;
yy9:	yych = *++YYCURSOR;
	if(yych <= 'm'){
		if(yych == 'l')	goto yy283;
		goto yy180;
	} else {
		if(yych <= 'n')	goto yy284;
		if(yych == 'x')	goto yy285;
		goto yy180;
	}
yy10:	yych = *++YYCURSOR;
	if(yych == 'l')	goto yy275;
	if(yych == 'o')	goto yy276;
	goto yy180;
yy11:	yych = *++YYCURSOR;
	if(yych == 'o')	goto yy271;
	goto yy180;
yy12:	yych = *++YYCURSOR;
	if(yych == 'f')	goto yy266;
	if(yych == 'n')	goto yy268;
	goto yy180;
yy13:	yych = *++YYCURSOR;
	if(yych == 'o')	goto yy262;
	goto yy180;
yy14:	yych = *++YYCURSOR;
	if(yych == 'e')	goto yy249;
	goto yy180;
yy15:	yych = *++YYCURSOR;
	if(yych <= 's'){
		if(yych <= 'g')	goto yy180;
		if(yych <= 'h')	goto yy216;
		if(yych <= 'i')	goto yy217;
		goto yy180;
	} else {
		if(yych <= 't')	goto yy218;
		if(yych == 'w')	goto yy219;
		goto yy180;
	}
yy16:	yych = *++YYCURSOR;
	if(yych == 'y')	goto yy209;
	goto yy180;
yy17:	yych = *++YYCURSOR;
	if(yych == 'n')	goto yy197;
	goto yy180;
yy18:	yych = *++YYCURSOR;
	if(yych == 'o')	goto yy186;
	goto yy180;
yy19:	yych = *++YYCURSOR;
	if(yych == 'h')	goto yy181;
	goto yy180;
yy20:	yych = *++YYCURSOR;
	goto yy180;
yy21:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych <= 'X'){
		if(yych <= 'T'){
			if(yych == 'L')	goto yy155;
			goto yy171;
		} else {
			if(yych <= 'U')	goto yy155;
			if(yych <= 'W')	goto yy171;
			goto yy172;
		}
	} else {
		if(yych <= 't'){
			if(yych == 'l')	goto yy155;
			goto yy171;
		} else {
			if(yych <= 'u')	goto yy155;
			if(yych == 'x')	goto yy172;
			goto yy171;
		}
	}
yy22:
#line 158 "cmmap.re"
{ RET(ICON); }
#line 318 "cmmap.c"
yy23:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	goto yy153;
yy24:	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych != '\n')	goto yy143;
	goto yy25;
yy25:
#line 224 "cmmap.re"
{
		printf("unexpected character: %c\n", *s->tok);
		goto std;
	    }
#line 332 "cmmap.c"
yy26:	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == '.')	goto yy131;
	if(yych <= '/')	goto yy27;
	if(yych <= '9')	goto yy132;
	goto yy27;
yy27:
#line 198 "cmmap.re"
{ RET('.'); }
#line 342 "cmmap.c"
yy28:	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == '\n')	goto yy25;
	goto yy121;
yy29:	yych = *++YYCURSOR;
	if(yych <= '<')	goto yy30;
	if(yych <= '=')	goto yy114;
	if(yych <= '>')	goto yy116;
	goto yy30;
yy30:
#line 208 "cmmap.re"
{ RET('>'); }
#line 355 "cmmap.c"
yy31:	yych = *++YYCURSOR;
	if(yych <= ';')	goto yy32;
	if(yych <= '<')	goto yy110;
	if(yych <= '=')	goto yy108;
	goto yy32;
yy32:
#line 207 "cmmap.re"
{ RET('<'); }
#line 364 "cmmap.c"
yy33:	yych = *++YYCURSOR;
	if(yych == '+')	goto yy104;
	if(yych == '=')	goto yy106;
	goto yy34;
yy34:
#line 203 "cmmap.re"
{ RET('+'); }
#line 372 "cmmap.c"
yy35:	yych = *++YYCURSOR;
	if(yych <= '<'){
		if(yych == '-')	goto yy100;
		goto yy36;
	} else {
		if(yych <= '=')	goto yy102;
		if(yych <= '>')	goto yy98;
		goto yy36;
	}
yy36:
#line 202 "cmmap.re"
{ RET('-'); }
#line 385 "cmmap.c"
yy37:	yych = *++YYCURSOR;
	if(yych == '=')	goto yy96;
	goto yy38;
yy38:
#line 204 "cmmap.re"
{ RET('*'); }
#line 392 "cmmap.c"
yy39:	yych = *++YYCURSOR;
	if(yych == '=')	goto yy94;
	goto yy40;
yy40:
#line 206 "cmmap.re"
{ RET('%'); }
#line 399 "cmmap.c"
yy41:	yych = *++YYCURSOR;
	if(yych == '&')	goto yy90;
	if(yych == '=')	goto yy92;
	goto yy42;
yy42:
#line 199 "cmmap.re"
{ RET('&'); }
#line 407 "cmmap.c"
yy43:	yych = *++YYCURSOR;
	if(yych == '=')	goto yy88;
	goto yy44;
yy44:
#line 209 "cmmap.re"
{ RET('^'); }
#line 414 "cmmap.c"
yy45:	yych = *++YYCURSOR;
	if(yych == '=')	goto yy86;
	if(yych == '|')	goto yy84;
	goto yy46;
yy46:
#line 210 "cmmap.re"
{ RET('|'); }
#line 422 "cmmap.c"
yy47:	yych = *++YYCURSOR;
	if(yych == '=')	goto yy82;
	goto yy48;
yy48:
#line 193 "cmmap.re"
{ RET('='); }
#line 429 "cmmap.c"
yy49:	yych = *++YYCURSOR;
	if(yych == '=')	goto yy80;
	goto yy50;
yy50:
#line 200 "cmmap.re"
{ RET('!'); }
#line 436 "cmmap.c"
yy51:	yych = *++YYCURSOR;
	goto yy52;
yy52:
#line 188 "cmmap.re"
{ RET(';'); }
#line 442 "cmmap.c"
yy53:	yych = *++YYCURSOR;
	goto yy54;
yy54:
#line 189 "cmmap.re"
{ RET('{'); }
#line 448 "cmmap.c"
yy55:	yych = *++YYCURSOR;
	goto yy56;
yy56:
#line 190 "cmmap.re"
{ RET('}'); }
#line 454 "cmmap.c"
yy57:	yych = *++YYCURSOR;
	goto yy58;
yy58:
#line 191 "cmmap.re"
{ RET(','); }
#line 460 "cmmap.c"
yy59:	yych = *++YYCURSOR;
	goto yy60;
yy60:
#line 192 "cmmap.re"
{ RET(':'); }
#line 466 "cmmap.c"
yy61:	yych = *++YYCURSOR;
	goto yy62;
yy62:
#line 194 "cmmap.re"
{ RET('('); }
#line 472 "cmmap.c"
yy63:	yych = *++YYCURSOR;
	goto yy64;
yy64:
#line 195 "cmmap.re"
{ RET(')'); }
#line 478 "cmmap.c"
yy65:	yych = *++YYCURSOR;
	goto yy66;
yy66:
#line 196 "cmmap.re"
{ RET('['); }
#line 484 "cmmap.c"
yy67:	yych = *++YYCURSOR;
	goto yy68;
yy68:
#line 197 "cmmap.re"
{ RET(']'); }
#line 490 "cmmap.c"
yy69:	yych = *++YYCURSOR;
	goto yy70;
yy70:
#line 201 "cmmap.re"
{ RET('~'); }
#line 496 "cmmap.c"
yy71:	yych = *++YYCURSOR;
	goto yy72;
yy72:
#line 211 "cmmap.re"
{ RET('?'); }
#line 502 "cmmap.c"
yy73:	yych = *++YYCURSOR;
	goto yy79;
yy74:
#line 214 "cmmap.re"
{ goto std; }
#line 508 "cmmap.c"
yy75:	yych = *++YYCURSOR;
	goto yy76;
yy76:
#line 217 "cmmap.re"
{
		if(cursor == s->eof) RET(EOI);
		s->pos = cursor; s->line++;
		goto std;
	    }
#line 518 "cmmap.c"
yy77:	yych = *++YYCURSOR;
	goto yy25;
yy78:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy79;
yy79:	if(yych <= '\n'){
		if(yych == '\t')	goto yy78;
		goto yy74;
	} else {
		if(yych <= '\f')	goto yy78;
		if(yych == ' ')	goto yy78;
		goto yy74;
	}
yy80:	yych = *++YYCURSOR;
	goto yy81;
yy81:
#line 187 "cmmap.re"
{ RET(NEQ); }
#line 538 "cmmap.c"
yy82:	yych = *++YYCURSOR;
	goto yy83;
yy83:
#line 186 "cmmap.re"
{ RET(EQL); }
#line 544 "cmmap.c"
yy84:	yych = *++YYCURSOR;
	goto yy85;
yy85:
#line 183 "cmmap.re"
{ RET(OROR); }
#line 550 "cmmap.c"
yy86:	yych = *++YYCURSOR;
	goto yy87;
yy87:
#line 176 "cmmap.re"
{ RET(OREQ); }
#line 556 "cmmap.c"
yy88:	yych = *++YYCURSOR;
	goto yy89;
yy89:
#line 175 "cmmap.re"
{ RET(XOREQ); }
#line 562 "cmmap.c"
yy90:	yych = *++YYCURSOR;
	goto yy91;
yy91:
#line 182 "cmmap.re"
{ RET(ANDAND); }
#line 568 "cmmap.c"
yy92:	yych = *++YYCURSOR;
	goto yy93;
yy93:
#line 174 "cmmap.re"
{ RET(ANDEQ); }
#line 574 "cmmap.c"
yy94:	yych = *++YYCURSOR;
	goto yy95;
yy95:
#line 173 "cmmap.re"
{ RET(MODEQ); }
#line 580 "cmmap.c"
yy96:	yych = *++YYCURSOR;
	goto yy97;
yy97:
#line 171 "cmmap.re"
{ RET(MULEQ); }
#line 586 "cmmap.c"
yy98:	yych = *++YYCURSOR;
	goto yy99;
yy99:
#line 181 "cmmap.re"
{ RET(DEREF); }
#line 592 "cmmap.c"
yy100:	yych = *++YYCURSOR;
	goto yy101;
yy101:
#line 180 "cmmap.re"
{ RET(DECR); }
#line 598 "cmmap.c"
yy102:	yych = *++YYCURSOR;
	goto yy103;
yy103:
#line 170 "cmmap.re"
{ RET(SUBEQ); }
#line 604 "cmmap.c"
yy104:	yych = *++YYCURSOR;
	goto yy105;
yy105:
#line 179 "cmmap.re"
{ RET(INCR); }
#line 610 "cmmap.c"
yy106:	yych = *++YYCURSOR;
	goto yy107;
yy107:
#line 169 "cmmap.re"
{ RET(ADDEQ); }
#line 616 "cmmap.c"
yy108:	yych = *++YYCURSOR;
	goto yy109;
yy109:
#line 184 "cmmap.re"
{ RET(LEQ); }
#line 622 "cmmap.c"
yy110:	yych = *++YYCURSOR;
	if(yych == '=')	goto yy112;
	goto yy111;
yy111:
#line 178 "cmmap.re"
{ RET(LSHIFT); }
#line 629 "cmmap.c"
yy112:	yych = *++YYCURSOR;
	goto yy113;
yy113:
#line 168 "cmmap.re"
{ RET(LSHIFTEQ); }
#line 635 "cmmap.c"
yy114:	yych = *++YYCURSOR;
	goto yy115;
yy115:
#line 185 "cmmap.re"
{ RET(GEQ); }
#line 641 "cmmap.c"
yy116:	yych = *++YYCURSOR;
	if(yych == '=')	goto yy118;
	goto yy117;
yy117:
#line 177 "cmmap.re"
{ RET(RSHIFT); }
#line 648 "cmmap.c"
yy118:	yych = *++YYCURSOR;
	goto yy119;
yy119:
#line 167 "cmmap.re"
{ RET(RSHIFTEQ); }
#line 654 "cmmap.c"
yy120:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy121;
yy121:	if(yych <= '!'){
		if(yych != '\n')	goto yy120;
		goto yy122;
	} else {
		if(yych <= '"')	goto yy124;
		if(yych == '\\')	goto yy123;
		goto yy120;
	}
yy122:	YYCURSOR = YYMARKER;
	switch(yyaccept){
	case 0:	goto yy22;
	case 3:	goto yy134;
	case 2:	goto yy27;
	case 1:	goto yy25;
	}
yy123:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if(yych <= 'b'){
		if(yych <= '7'){
			if(yych <= '&'){
				if(yych == '"')	goto yy120;
				goto yy122;
			} else {
				if(yych <= '\'')	goto yy120;
				if(yych <= '/')	goto yy122;
				goto yy127;
			}
		} else {
			if(yych <= '['){
				if(yych == '?')	goto yy120;
				goto yy122;
			} else {
				if(yych <= '\\')	goto yy120;
				if(yych <= '`')	goto yy122;
				goto yy120;
			}
		}
	} else {
		if(yych <= 'r'){
			if(yych <= 'm'){
				if(yych == 'f')	goto yy120;
				goto yy122;
			} else {
				if(yych <= 'n')	goto yy120;
				if(yych <= 'q')	goto yy122;
				goto yy120;
			}
		} else {
			if(yych <= 'u'){
				if(yych == 't')	goto yy120;
				goto yy122;
			} else {
				if(yych <= 'v')	goto yy120;
				if(yych == 'x')	goto yy126;
				goto yy122;
			}
		}
	}
yy124:	yych = *++YYCURSOR;
	goto yy125;
yy125:
#line 164 "cmmap.re"
{ RET(SCON); }
#line 723 "cmmap.c"
yy126:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if(yych <= '@'){
		if(yych <= '/')	goto yy122;
		if(yych <= '9')	goto yy129;
		goto yy122;
	} else {
		if(yych <= 'F')	goto yy129;
		if(yych <= '`')	goto yy122;
		if(yych <= 'f')	goto yy129;
		goto yy122;
	}
yy127:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy128;
yy128:	if(yych <= '"'){
		if(yych == '\n')	goto yy122;
		if(yych <= '!')	goto yy120;
		goto yy124;
	} else {
		if(yych <= '7'){
			if(yych <= '/')	goto yy120;
			goto yy127;
		} else {
			if(yych == '\\')	goto yy123;
			goto yy120;
		}
	}
yy129:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy130;
yy130:	if(yych <= '9'){
		if(yych <= '!'){
			if(yych == '\n')	goto yy122;
			goto yy120;
		} else {
			if(yych <= '"')	goto yy124;
			if(yych <= '/')	goto yy120;
			goto yy129;
		}
	} else {
		if(yych <= '['){
			if(yych <= '@')	goto yy120;
			if(yych <= 'F')	goto yy129;
			goto yy120;
		} else {
			if(yych <= '\\')	goto yy123;
			if(yych <= '`')	goto yy120;
			if(yych <= 'f')	goto yy129;
			goto yy120;
		}
	}
yy131:	yych = *++YYCURSOR;
	if(yych == '.')	goto yy140;
	goto yy122;
yy132:	yyaccept = 3;
	YYMARKER = ++YYCURSOR;
	if((YYLIMIT - YYCURSOR) < 3) YYFILL(3);
	yych = *YYCURSOR;
	goto yy133;
yy133:	if(yych <= 'K'){
		if(yych <= 'D'){
			if(yych <= '/')	goto yy134;
			if(yych <= '9')	goto yy132;
			goto yy134;
		} else {
			if(yych <= 'E')	goto yy135;
			if(yych <= 'F')	goto yy136;
			goto yy134;
		}
	} else {
		if(yych <= 'e'){
			if(yych <= 'L')	goto yy136;
			if(yych >= 'e')	goto yy135;
			goto yy134;
		} else {
			if(yych <= 'f')	goto yy136;
			if(yych == 'l')	goto yy136;
			goto yy134;
		}
	}
yy134:
#line 161 "cmmap.re"
{ RET(FCON); }
#line 811 "cmmap.c"
yy135:	yych = *++YYCURSOR;
	if(yych <= ','){
		if(yych == '+')	goto yy137;
		goto yy122;
	} else {
		if(yych <= '-')	goto yy137;
		if(yych <= '/')	goto yy122;
		if(yych <= '9')	goto yy138;
		goto yy122;
	}
yy136:	yych = *++YYCURSOR;
	goto yy134;
yy137:	yych = *++YYCURSOR;
	if(yych <= '/')	goto yy122;
	if(yych >= ':')	goto yy122;
	goto yy138;
yy138:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy139;
yy139:	if(yych <= 'K'){
		if(yych <= '9'){
			if(yych <= '/')	goto yy134;
			goto yy138;
		} else {
			if(yych == 'F')	goto yy136;
			goto yy134;
		}
	} else {
		if(yych <= 'f'){
			if(yych <= 'L')	goto yy136;
			if(yych <= 'e')	goto yy134;
			goto yy136;
		} else {
			if(yych == 'l')	goto yy136;
			goto yy134;
		}
	}
yy140:	yych = *++YYCURSOR;
	goto yy141;
yy141:
#line 166 "cmmap.re"
{ RET(ELLIPSIS); }
#line 855 "cmmap.c"
yy142:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy143;
yy143:	if(yych <= '&'){
		if(yych == '\n')	goto yy122;
		goto yy142;
	} else {
		if(yych <= '\'')	goto yy145;
		if(yych != '\\')	goto yy142;
		goto yy144;
	}
yy144:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if(yych <= 'b'){
		if(yych <= '7'){
			if(yych <= '&'){
				if(yych == '"')	goto yy142;
				goto yy122;
			} else {
				if(yych <= '\'')	goto yy142;
				if(yych <= '/')	goto yy122;
				goto yy147;
			}
		} else {
			if(yych <= '['){
				if(yych == '?')	goto yy142;
				goto yy122;
			} else {
				if(yych <= '\\')	goto yy142;
				if(yych <= '`')	goto yy122;
				goto yy142;
			}
		}
	} else {
		if(yych <= 'r'){
			if(yych <= 'm'){
				if(yych == 'f')	goto yy142;
				goto yy122;
			} else {
				if(yych <= 'n')	goto yy142;
				if(yych <= 'q')	goto yy122;
				goto yy142;
			}
		} else {
			if(yych <= 'u'){
				if(yych == 't')	goto yy142;
				goto yy122;
			} else {
				if(yych <= 'v')	goto yy142;
				if(yych == 'x')	goto yy146;
				goto yy122;
			}
		}
	}
yy145:	yych = *++YYCURSOR;
	goto yy22;
yy146:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if(yych <= '@'){
		if(yych <= '/')	goto yy122;
		if(yych <= '9')	goto yy149;
		goto yy122;
	} else {
		if(yych <= 'F')	goto yy149;
		if(yych <= '`')	goto yy122;
		if(yych <= 'f')	goto yy149;
		goto yy122;
	}
yy147:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy148;
yy148:	if(yych <= '\''){
		if(yych == '\n')	goto yy122;
		if(yych <= '&')	goto yy142;
		goto yy145;
	} else {
		if(yych <= '7'){
			if(yych <= '/')	goto yy142;
			goto yy147;
		} else {
			if(yych == '\\')	goto yy144;
			goto yy142;
		}
	}
yy149:	++YYCURSOR;
